Menu button animation

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #000;
-$secondary-color: #3500D3;
-$dark-purple: #0C0032;
-$light-purple: #190061;
+$secondary-color: #5680e9;
+$light-purple: #8860d0;
+$light-blue: #5ab9ea;
 $grey: #282828;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
