--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,15 +1,15 @@
 //Menu Button
 
-.menu-btn{
+.menu-btn {
   position: absolute;
   z-index: 3;
-  right:35px;
-  top:35px;
-  cursor:pointer;
+  right: 35px;
+  top: 35px;
+  cursor: pointer;
 
   @include easeOut;
 
-  .btn-line{
+  .btn-line {
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
@@ -19,22 +19,129 @@
   }
 
   //Rotate Into X with Menu Lines
-  &.close{
+  &.close {
     transform: rotate(180deg);
-    
-    .btn-line{
+
+    .btn-line {
+
       //Line 1 - Rotate
       &:nth-child(1) {
-        transform: rotate(45deg) translate(5px,5px);
+        transform: rotate(45deg) translate(5px, 5px);
       }
+
       //Line 1 - Hide
       &:nth-child(2) {
-        opacity:0;
+        opacity: 0;
       }
+
       //Line 3 - Rotate
       &:nth-child(3) {
-        transform: rotate(-45deg) translate(7px,-6px);
+        transform: rotate(-45deg) translate(7px, -6px);
       }
     }
+  }
+}
+
+
+//Menu Overlay 
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  visibility: hidden;
+
+  &.show{
+    visibility: visible;
+  }
+
+  &-branding, 
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+    opacity:0.8;
+  }
+
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: lighten($grey, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+
+    &.show{
+      // Slide in from top
+      transform: translate3d(0,0,0);
+    }
+  }
+
+  //Branding Side
+
+  &-branding {
+    margin: 0;
+    padding: 0;
+    background: darken($secondary-color, 1);
+    list-style: none;
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+
+    &.show{
+      // Slide in from bottom
+      transform: translate3d(0,0,0);
+    }
+
+    .portrait{
+      width: 250px;
+      height: 250px;
+      background: url('../img/portrait.png');
+      border-radius: 50%;
+      border: solid 4px $secondary-color;
+    }
+
+  }
+
+  .nav-item{
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show{
+      // Slide in from right
+      transform: translate3d(0,0,0);
+    }
+
+    &.current > a{
+      color:$secondary-color;
+    }
+  }
+
+  .nav-link {
+    display:inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 400;
+    color: #fff;
+    text-decoration: none;
+
+    @include easeOut;
+
+    &:hover{
+      color: $secondary-color;
+    }
+  }
+}
+
+//Delay each nav item slide by 0.1s
+//Slides each nav item in from right, one at a time
+@for $index from 1 through 4 {
+  .nav-item:nth-child(#{$index}) {
+    transition-delay: $index * 0.1s;
   }
 }
