--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,5 +1,4 @@
 //Menu Button
-
 .menu-btn {
   position: absolute;
   z-index: 3;
@@ -13,7 +12,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: set-text-color($primary-color);
 
     @include easeOut;
   }
@@ -64,7 +63,6 @@
     width: 50%;
     height: 100vh;
     overflow: hidden;
-    opacity:0.8;
   }
 
   &-nav {
@@ -82,7 +80,6 @@
   }
 
   //Branding Side
-
   &-branding {
     margin: 0;
     padding: 0;
@@ -97,11 +94,11 @@
     }
 
     .portrait{
-      width: 250px;
-      height: 250px;
+      width: 200px;
+      height: 200px;
       background: url('../img/portrait.png');
       border-radius: 50%;
-      border: solid 4px $secondary-color;
+      border: solid 4px $grey;
     }
 
   }
@@ -127,7 +124,7 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 400;
-    color: #fff;
+    color: set-text-color($grey);
     text-decoration: none;
 
     @include easeOut;
