--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -8,11 +8,12 @@ $home-image: url(../img/background.jpg);
 $background-opacity: 0.8;
 
 
-//Set Text color- black for light background, white for dark backgrounds
-@function set-text-color($color){
+//Set Text color - black for light background, white for dark backgrounds
+@function set-text-color($color) {
   @if(lightness($color) > 40) {
     @return #000;
   }
+
   @else {
     @return #fff;
   }
@@ -24,20 +25,21 @@ $background-opacity: 0.8;
 }
 
 //Show background image and style to cover the full page.
-@mixin background{
+@mixin background {
   @if $show-home-image {
-    &#bg-img{
+    &#bg-img {
       background: $home-image;
       background-attachment: fixed;
       background-size: cover;
 
-       &:after{ //Pseudo-element replaces need for a div with class overlay in the HTML.
-        content:'';
+      &:after {
+        //Pseudo-element replaces need for a div with class overlay in the HTML.
+        content: '';
         position: absolute;
-        top:0;
-        right:0;
-        width:100%;
-        height:100%;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
         background: rgba($primary-color, $background-opacity);
         z-index: -1;
       }
@@ -46,26 +48,26 @@ $background-opacity: 0.8;
 }
 
 //Media query mixins
-@mixin mediaSm{
-  @media screen and (max-width: 500px){
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
     @content;
   }
 }
 
-@mixin mediaMd{
-  @media screen and (max-width: 768px){
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
     @content;
   }
 }
 
-@mixin mediaLg{
-  @media screen and (min-width: 769px) and (max-width: 1170px){
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
     @content;
   }
 }
 
-@mixin mediaXl{
-  @media screen and (min-width: 1171px){
+@mixin mediaXl {
+  @media screen and (min-width: 1171px) {
     @content;
   }
 }
