--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -49,11 +49,11 @@
   width: 100%;
   visibility: hidden;
 
-  &.show{
+  &.show {
     visibility: visible;
   }
 
-  &-branding, 
+  &-branding,
   &-nav {
     display: flex;
     flex-flow: column wrap;
@@ -68,14 +68,14 @@
   &-nav {
     margin: 0;
     padding: 0;
-    background: lighten($grey, 5);
+    background: lighten($primary-color, 5);
     list-style: none;
     transform: translate3d(0, -100%, 0);
     @include easeOut;
 
-    &.show{
+    &.show {
       // Slide in from top
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
     }
   }
 
@@ -88,12 +88,12 @@
     transform: translate3d(0, 100%, 0);
     @include easeOut;
 
-    &.show{
+    &.show {
       // Slide in from bottom
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
     }
 
-    .portrait{
+    .portrait {
       width: 200px;
       height: 200px;
       background: url('../img/portrait.png');
@@ -103,33 +103,33 @@
 
   }
 
-  .nav-item{
+  .nav-item {
     transform: translate3d(600px, 0, 0);
     @include easeOut;
 
-    &.show{
+    &.show {
       // Slide in from right
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
     }
 
-    &.current > a{
-      color:$secondary-color;
+    &.current>a {
+      color: $secondary-color;
     }
   }
 
   .nav-link {
-    display:inline-block;
+    display: inline-block;
     position: relative;
     font-size: 30px;
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 400;
-    color: set-text-color($grey);
+    color: set-text-color($primary-color);
     text-decoration: none;
 
     @include easeOut;
 
-    &:hover{
+    &:hover {
       color: $secondary-color;
     }
   }
