--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,67 +1,66 @@
-
 @import 'config';
 @import 'menu';
 
-*{
+* {
   box-sizing: border-box;
 }
 
-body{
+body {
 
   @include background;
   background: $primary-color;
   color: set-text-color($primary-color);
-  height:100%;
-  margin:0;
+  height: 100%;
+  margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  word-spacing: 0.25em;
-  
+  word-spacing: 0.1em;
 }
 
-
 //Headings
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   margin: 0;
   font-weight: 400;
 
-  &.lg-heading{
+  &.lg-heading {
     font-size: 6rem;
   }
-  &.sm-heading{
+
+  &.sm-heading {
     margin-bottom: 2rem;
-    padding: 0.2rem 1rem;
-    background: rgba(lighten($primary-color, 2), 0.5);
+    padding: 0.5rem;
   }
 }
 
-a{
-  color:white;
+a {
+  color: white;
   text-decoration: none;
 }
 
-header{
+header {
   position: fixed;
   z-index: 2;
-  width:100%;
+  width: 100%;
 }
 
-.text-secondary{
+.text-secondary {
   color: $secondary-color;
 }
 
-main{
+main {
   padding: 4rem;
 
   //Ensures content takes up all space besides the 60px for footer
   min-height: calc(100vh - 60px);
 
-  .icons{
+  .icons {
     margin-top: 1rem;
 
-    a{
+    a {
       padding: 0.4rem;
 
-      &:hover{
+      &:hover {
         color: $secondary-color;
         // make call to easeOut mixin 
         @include easeOut;
@@ -69,52 +68,155 @@ main{
     }
   }
 
-  &#home{
+  &#home {
     overflow: hidden;
-    h1{
+
+    h1 {
       margin-top: 20vh;
+    }
+    h1,h2,h3, .icons{
+      text-align:center;
     }
   }
 }
 
-.about-info{
-  display:grid;
+.about-info {
+  display: grid;
   grid-gap: 30px;
-  grid-template-areas: 
-  'bioimage bio bio'
-  'job1 job2 job3';
-  grid-template-columns: repeat(1fr);
+  grid-template-areas:
+    'bioimage bio bio'
+    'job1 job2 job3';
+  grid-template-columns: repeat(3, 1fr);
 
 
-  .bio-image{
+  .bio-image {
     grid-area: bioimage;
-    margin:auto;
+    margin: auto;
     border-radius: 50%;
     border: white 3px solid
   }
-  
-  .bio{
-    grid-area:bio;
+
+  .bio {
+    grid-area: bio;
     font-size: 1.5rem;
   }
-  
-  .job-1{
-    grid-area:job1;
+
+  .job-1 {
+    grid-area: job1;
   }
-  
-  .job-2{
-    grid-area:job2;
+
+  .job-2 {
+    grid-area: job2;
   }
-  
-  .job-3{
-    grid-area:job3;
+
+  .job-3 {
+    grid-area: job3;
   }
-  
+
   .job {
     background: lighten($primary-color, 5);
-    padding:0.5rem;
+    padding: 0.5rem;
     border-bottom: $secondary-color 5px solid;
   }
+}
+
+// Work/Projects page
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+
+
+  img {
+    width: 100%;
+    border: 3px #FFF solid;
+    display:block;
+  }
+
+  .item{ //Animate image overlay from top 
+    position:relative;
+
+    .img-overlay{
+      background:$primary-color;
+      opacity:0.9;
+      position: absolute;
+      bottom: 100%;
+      top:0;
+      left:0;
+      right:0;
+      width:100%;
+      overflow:hidden;
+      height:0;
+      transform: translate(0%, 0%);
+      cursor:pointer;
+      @include easeOut;
+
+      .img-overlay-btn{
+        position:absolute;
+        top:35%;
+        width:100%;
+        text-align:center;
+      }
+    }
+
+    &:hover {
+      .img-overlay{
+        bottom:0;
+        height:100%;
+      }
+    }
+  }
+}
+
+//Contact Page
+.boxes {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: 1fr;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1rem 2rem;
+    margin-bottom: 2rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.25rem 1rem;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+
+      span {
+        color: set-text-color($secondary-color);
+      }
+    }
+  }
+}
+
+//Button styles
+.btn {
+  display: block;
+  padding: 0.5rem 0 0 0.5rem;
+  border: 0;
+
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+
+//Light and dark buttons inherit .btn class
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #FFF;
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #333;
 }
 
 #main-footer {
@@ -122,7 +224,7 @@ main{
   padding: 1rem;
   background: darken($primary-color, 5);
   color: set-text-color($primary-color);
-  height:60px;
+  height: 60px;
 }
 
 
