--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -68,7 +68,7 @@
   &-nav {
     margin: 0;
     padding: 0;
-    background: lighten($primary-color, 5);
+    background: rgba($primary-color, $background-opacity);
     list-style: none;
     transform: translate3d(0, -100%, 0);
     @include easeOut;
@@ -83,7 +83,7 @@
   &-branding {
     margin: 0;
     padding: 0;
-    background: darken($secondary-color, 1);
+    background: rgba($secondary-color, $background-opacity);
     list-style: none;
     transform: translate3d(0, 100%, 0);
     @include easeOut;
