--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,13 +80,15 @@ main {
   }
 }
 
+//About Page
+
 .about-info {
   display: grid;
   grid-gap: 30px;
   grid-template-areas:
     'bioimage bio bio'
-    'job1 job2 job3';
-  grid-template-columns: repeat(3, 1fr);
+    'job1 job2 job2';
+  grid-template-columns: repeat(2, 1fr);
 
 
   .bio-image {
@@ -123,7 +125,7 @@ main {
 // Work/Projects page
 .projects {
   display: grid;
-  grid-gap: 0.7rem;
+  grid-gap: 2.5rem;
   grid-template-columns: repeat(3, 1fr);
 
 
@@ -131,6 +133,7 @@ main {
     width: 100%;
     border: 3px #FFF solid;
     display:block;
+    overflow:hidden;
   }
 
   .item{ //Animate image overlay from top 
@@ -150,13 +153,6 @@ main {
       transform: translate(0%, 0%);
       cursor:pointer;
       @include easeOut;
-
-      .img-overlay-btn{
-        position:absolute;
-        top:35%;
-        width:100%;
-        text-align:center;
-      }
     }
 
     &:hover {
@@ -197,8 +193,10 @@ main {
 //Button styles
 .btn {
   display: block;
-  padding: 0.5rem 0 0 0.5rem;
-  border: 0;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  margin-top:0.5rem;
+  border: 1.5px solid white;
+  text-align: center;
 
   &:hover {
     background: $secondary-color;
