--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -7,12 +7,14 @@
     grid-template-columns: repeat(4, 1fr);
   }
 }
+
 //Desktops and laptops -- 769px to 1170 px
 @include mediaLg {
   .projects {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
 //Tablets and small laptops -- 768px to 501px
 @include mediaMd {
   main {
@@ -26,29 +28,29 @@
   }
 
   ul.menu-nav,
-   div.menu-branding {
-    float:none;
-    width:100%;
+  div.menu-branding {
+    float: none;
+    width: 100%;
     min-height: 0;
 
     &.show {
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
     }
 
-    &.nav-item{
-      color:red;
+    &.nav-item {
+      color: red;
     }
   }
 
   .menu-nav {
     height: 75vh;
-    transform: translate3d(-100%,0,0);
+    transform: translate3d(-100%, 0, 0);
     font-size: 24px;
   }
 
   .menu-branding {
     height: 25vh;
-    transform: translate3d(100%,0,0);
+    transform: translate3d(100%, 0, 0);
 
     .portrait {
       background: url('../img/portrait_small.png');
@@ -57,29 +59,46 @@
     }
   }
 
-  .about-info { //Stack about elements on small screens
+  .about-info {
+    //Stack about elements on small screens
     grid-template-areas:
-    'bioimage'
-    'bio'
-    'job1'
-    'job2'
-    'job3';
+      'bioimage'
+      'bio'
+      'job1'
+      'job2'
+      'job3';
 
     //One column on small screens
-    grid-template-columns: 1fr; 
+    grid-template-columns: 1fr;
   }
 
   .projects {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
 //Mobile phones -- 500px and smaller
 @include mediaSm {
-  main#home h1{
-    margin-top:10vh;
+  main#home h1 {
+    margin-top: 10vh;
   }
 
   .projects {
     grid-template-columns: 1fr;
+  }
+
+  h1 {
+
+    &.lg-heading {
+      font-size: 4rem;
+    }
+  }
+
+  .boxes {
+    div {
+      &.email {
+        font-size: 1.5rem !important;
+      }
+    }
   }
 }
